Fix an issue, where Quill editor added empty paragraphs after <h5> and <h6>. Replace deprecated `grid-gap` with `gap`.

--- a/backend/installer/sample-content/empty/$index/public/empty.css
+++ b/backend/installer/sample-content/empty/$index/public/empty.css
@@ -14,7 +14,7 @@ img {
 .j-Columns {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-gap: .4rem;
+    gap: .4rem;
 }
 .j-Columns.inline { display: inline-grid; }
 .j-Columns.inline > * { display: inherit; }
